--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <!--shimmer-->
     <color name="demo_light_transparent">#16000000</color>
     <color name="demo_dark_transparent">#24000000</color>
+    <color name="view">#f6e9e0</color>
 
 
 
@@ -44,7 +45,16 @@
 
     <color name="green">#70c050</color>
 
+    <color name="bg_screen1">#b12515</color>
+    <color name="bg_screen2">#FFBB00</color>
+    <color name="bg_screen3">#74a443</color>
 
+    <!-- dots active colors -->
+    <color name="dot_active">#000000</color>
+
+
+    <!-- dots inactive colors -->
+    <color name="dot_inactive">#cccccc</color>
 
 
 </resources>
