--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,5 @@
 <resources>
 
-    <style name="AppTheme" parent="AppTheme.Base">
-
-    </style>
 
     <style name="ListFont" parent="@android:style/Widget.ListView">
         <item name="android:textColor">#fff</item>
@@ -29,6 +26,18 @@
         <item name="tabGravity">fill</item>
         <item name="tabMode">fixed</item>
 
+    </style>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
 </resources>
