--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,4 +4,7 @@
     android:id="@+id/menuLogout"
     android:title="Logout"
     />
+    <item android:id="@+id/menureminder"
+        android:title="Reminder"/>
+
 </menu>
