--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,18 @@
 <resources>
 
-    <style name="AppTheme" parent="AppTheme.Base">
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorForeground">@color/foreground_material_light</item>
+        <item name="actionModeBackground">@color/colorPrimary</item>
+        <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionModeOverlay">true</item>
 
     </style>
-
-    <style name="ListFont" parent="@android:style/Widget.ListView">
-        <item name="android:textColor">#fff</item>
-        <item name="android:typeface">sans</item>
-    </style>
-
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -19,6 +23,21 @@
         <item name="android:windowContentTransitions">true</item>
 
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+    </style>
+
+
+    <style name="ListFont" parent="@android:style/Widget.ListView">
+        <item name="android:textColor">#fff</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+
+
 
 
 
