--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -155,6 +155,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="48dp"
         app:srcCompat="@drawable/logo3" />
-
+<ProgressBar
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+    android:visibility="gone"
+    android:id="@+id/progress"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
 
 </RelativeLayout>
