--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#002633</color>
     <color name="colorPrimaryDark">@color/grey_trans</color>
     <color name="colorAccent">#FF4081</color>
-
+    <color name="fab_pressed">#546e7a</color>
 
     <color name="yellow">#F6A623</color>
 
