--- a/app/src/main/res/layout/contact_model.xml
+++ b/app/src/main/res/layout/contact_model.xml
@@ -14,7 +14,9 @@
         android:layout_margin="5dp"
         android:layout_width="90dp"
         android:layout_height="match_parent" />
+
     <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
         <TextView
@@ -23,7 +25,7 @@
             android:textSize="20dp"
             android:text="Prageet N. Gupta"
             android:id="@+id/name1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
 
@@ -46,7 +48,7 @@
             android:layout_marginLeft="10dp"
             android:textColor="@color/black"
             android:id="@+id/desig1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="visible"
             />
