--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item
-    android:id="@+id/menuLogout"
-    android:title="Logout"
-    />
+
+    <item android:id="@+id/menudevelopers"
+        android:title="Developers"/>
+
     <item android:id="@+id/menureminder"
         android:title="Reminder"/>
+
+    <item
+        android:id="@+id/menuLogout"
+        android:title="Logout"
+        />
 
 </menu>
